[project]
name = "qb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.3",
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-pydantic>=0.13.1",
    "flask-redis>=0.4.0",
    "flask-sqlalchemy>=3.1.1",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "tqdm>=4.67.1",
    "psycopg2-binary",
    "requests"
]

[[tool.uv.index]]
url = "https://10.29.30.71/simple"
default = true